add changes display for "updated" entities
