# server/handler/event_log_handler.go
@@ -55,3 +55,38 @@ func (h *Handler) FilterEventLogs(w http.ResponseWriter, r *http.Request) {
 
 	jsonOK(w, response.NewFilterEventLog(logs, count))
 }
+
+// EventLogChanges return changes of event log
+//
+//	@ID			EventLogChanges
+//	@Summary	Get changes in an event log
+//	@Tags		event-logs
+//	@Accept		json
+//	@Produce	json
+//	@Param		id	path		string	true	"Event log ID"
+//	@Success	200		{object}	response.EventLogChanges
+//	@Failure	400		{object}	Error
+//	@Failure	422		{object}	Error
+//	@Failure	500		{object}	Error
+//	@Router		/event-logs/ [get]
+//	@Security	ApiKeyAuth
+func (h *Handler) EventLogChanges(w http.ResponseWriter, r *http.Request) {
+	ctx, span := h.tracer.Start(r.Context(), "EventLogChanges")
+	defer span.End()
+
+	id, err := idFromPath(r)
+	if err != nil {
+		Abort(w, r, err)
+		return
+	}
+
+	changes, err := h.service.EventLogChanges(ctx, id)
+	if err != nil {
+		Abort(w, r, err)
+		return
+	}
+
+	jsonOK(w, response.EventLogChanges{
+		Changes: changes,
+	})
+}
